# django-backend-project

./: .env.example  .gitignore  Dockerfile  Makefile  PERIODIC_TASK_TROUBLESHOOTING.md  README.md  alembic.ini  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  cleanup_permissions.py  debug_listener.py  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  start.sh  start_services.sh  tasks.py  test_async_setup.py  test_conversation.py  test_reconnect.py  test_redis.py  test_task.py  test_websocket_client.py
.github/workflows/: main.yml
migrations/: base.py  common.py  env.py  script.py.mako
migrations/old_versions/: 03f996d78561_ticket_email_log_table_added.py  0d37df01ec47_priority_table_added.py  422ff03cf2c7_ticket_assigness_model_added.py  51988a36d1ab_organization.py  569993d68ff6_sla_table_added.py  610a4d0690ad_organization_member.py  693f9aa43bb5_customer.py  71773e73c420_email_verfication.py  cfd44e9f4e8e_message.py  d83e3f5df43d_contact_table_added.py  dccc09a8929f_2fa_support.py
migrations/versions/: 0153f2ba2a04_ticket_table_added.py  03f996d78561_ticket_email_log_table_added.py  0551e46b3c51_attachement.py  0d37df01ec47_priority_table_added.py  14b296459f7c_invitation.py  20250731_023113_add_users.py  20250731_110537_organization.py  20250801_015459_refreshtoken.py  20250801_020510_verification.py  20250801_020657_organization.py  20250801_070134_organizationmember.py  20250801_071152_organizationroles.py  20250801_080309_organizationmemberroles.py  20250801_083808_organizationinvitation.py  20250801_084656_team.py  20250801_085215_teammember.py  20250801_085704_customer.py  20250801_085926_customerlogs.py  20250801_090511_conversation.py  20250801_090823_conversationmember.py  20250801_091243_message.py  20250801_091606_messageattachements.py  20250803_044729_ticket_priority_table_added.py  20250803_050421_ticket_status_table_added.py  20250803_051346_ticket_sla_table_added.py  20250803_051947_ticket_table_added.py  20250803_052710_ticket_assignees_table_added.py  20250803_053126_ticket_alert_table_added.py  20250803_053316_ticket_email_log_addded.py  20250803_104545_add_permission_group_table.py  20250804_055139_add_permissiongroup_table.py  20250804_055307_add_permission_table.py  20250804_062017_add_rolepermission_table.py  20250806_052905_ticket_logs_added.py  (+30 more)
src/: app.py  main.py  models.py  seed.py  socket_config.py
src/common/: context.py  (+6 more)
tests/: common.py
(+133 files in other folders)
