[project]
name = "chatboq-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.2",
    "bcrypt>=4.3.0",
    "cachetools>=6.1.0",
    "celery[redis]>=5.5.3",
    "fastapi[standard]>=0.115.14",
    "flower>=2.0.1",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlmodel>=0.0.24",
]
