[project]
name = "chatboq-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "alembic>=1.16.2",
    "asyncio-redis>=0.16.0",
    "authlib>=1.6.0",
    "bcrypt>=4.3.0",
    "broadcaster>=0.3.1",
    "cachetools>=6.1.0",
    "celery[redis]>=5.5.3",
    "fastapi[standard]>=0.115.14",
    "flower>=2.0.1",
    "itsdangerous>=2.2.0",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlmodel>=0.0.24",
    "websockets>=15.0.1",
    "confluent-kafka>=2.3.0",
    "asyncpg>=0.30.0",
    "black>=25.1.0",
    "pydantic-settings>=2.10.1",
]
